--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.0
+cloudinary==1.29.0
 dj-database-url==0.5.0
 Django==3.2
 django-ckeditor==6.2.0
+django-cloudinary-storage==0.3.0
 django-js-asset==2.0.0
 gunicorn==20.1.0
 Pillow==9.0.1
